pfish       2006/01/06 08:50:07 UTC	(20060106-4515)
  Log:
  Remove some debugging info from node.c and update help file
  

  Changes:	Modified:
  +1 -1		trunk/help/oservice/ignore (File Modified) 
  +0 -3		trunk/src/node.c (File Modified) 


pfish       2006/01/06 08:44:26 UTC	(20060106-4513)
  Log:
  update example configs
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 
  +2 -0		trunk/dist/example.userserv.conf (File Modified) 


pfish       2006/01/06 08:41:48 UTC	(20060106-4511)
  Log:
  Add help for OperServ IGNORE
  

  Changes:	Modified:
  +15 -0	trunk/help/oservice/ignore (File Added) 


pfish       2006/01/06 08:36:17 UTC	(20060106-4509)
  Log:
  Enable $Id$ tracking and fix IGNORE WIPE. We notice the origin of each ignore that was removed.
  

  Changes:	Modified:
  +8 -1		trunk/modules/operserv/ignore.c (File Modified) (Property Modified)


pfish       2006/01/06 08:31:28 UTC	(20060106-4507)
  Log:
  Improve services ignore:
  - Add reasons
  - Keep track of who set it and when
  - Display this info in the LIST.
  
  

  Changes:	Modified:
  +18 -9	trunk/backend/flatfile.c (File Modified) 
  +5 -0		trunk/include/account.h (File Modified) 
  +4 -1		trunk/include/extern.h (File Modified) 
  +19 -15	trunk/modules/operserv/ignore.c (File Modified) 
  +23 -2	trunk/src/node.c (File Modified) 


nenolod     2006/01/05 15:14:42 UTC	(20060105-4505)
  Log:
  Explain that Atheme is not based on IRCServices/EsperNet code, and 
  explain why this is.
  

  Changes:	Modified:
  +8 -0		trunk/README (File Modified) 


jilles      2006/01/05 12:46:25 UTC	(20060105-4503)
  Log:
  Add a description of commands like /stats.
  

  Changes:	Modified:
  +47 -0	trunk/doc/PCOMMANDS (File Added) 


pfish       2006/01/05 04:40:09 UTC	(20060105-4501)
  Log:
  Save services ignores to flatfile.
  

  Changes:	Modified:
  +27 -0	trunk/backend/flatfile.c (File Modified) 


pfish       2006/01/05 01:36:50 UTC	(20060105-4499)
  Log: