@@ -1,3 +1,13 @@
+pfish       2006/01/06 09:51:50 UTC	(20060106-4517)
+  Log:
+  Expand WHY to show which nickname the user is using to gain the access:
+  -ChanServ- pfish2 was granted channel ops in # because they have identified to the nickname pfish which has the autoop privilege.
+  
+
+  Changes:	Modified:
+  +6 -6		trunk/modules/chanserv/why.c (File Modified) 
+
+
 pfish       2006/01/06 08:50:07 UTC	(20060106-4515)
   Log:
   Remove some debugging info from node.c and update help file
